--- a/index.html
+++ b/index.html
@@ -169,23 +169,10 @@ programming.</p> -->
 					</article>
 				</div>
 			<!-- project decision tree implementation -->
-			<div class="box project-text jello-horizontal sql">
-				<article>
-					<div><a href="projects/case-study.html">
-						<figure class="image project-figure">
-							<img src="https://i.ibb.co/2FWF6MV/Screenshot-from-2023-04-28-10-51-13.png" alt="Image" class="img-responsive" >
-						<figcaption >
-								Decision tree model with maximum depth of 3. Gini impurity is implemented.
-						</figcaption></a>
-						</figure>
-					</div>
-				</article>
-			</div>
-			<!-- project decision tree implementation -->
 		<div class="column">
 			<div class="box project-text jello-horizontal sql">
 				<article>
-					<div><a href="projects/case-study.html">
+					<div><a href="https://github.com/AlejandroPinto5/Decision-Tree/blob/main/Desicion_Tree_Implementation.ipynb">
 						<figure class="image project-figure">
 							<img src="https://i.ibb.co/2FWF6MV/Screenshot-from-2023-04-28-10-51-13.png" alt="Image" class="img-responsive" >
 						<figcaption >
