--- a/projects/eucaristicschool.html
+++ b/projects/eucaristicschool.html
@@ -108,6 +108,7 @@
                 </ol>
 
                 <p>Based on the analysis of the data, we can draw conclusions about the overall performance of the students, as well as their performance on specific components and competences. We can also identify any areas of weakness or strength, and make recommendations for improvement. It's important to note that this analysis is based on a limited amount of data, and further analysis may be needed to fully understand the performance of the students.</p>
+								<p>You can find the notebook here: <a href="https://github.com/AlejandroPinto5/JesusEucaristiaSchool">Data Analysis of </a>INSIGHTS INTO STUDENT PERFORMANCE IN HIGH SCHOOL PHYSICS </p>
           </div>
 
         </main-rp>
