Proffesional profile and logo updated

--- a/index.html
+++ b/index.html
@@ -62,15 +62,14 @@
 			</div> -->
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="https://i.ibb.co/nwjS0FL/image33.png">
+				<img class="avatar" src="https://i.ibb.co/m0cLrhd/both-data.png">
 			</div>
 				<div class="cv">
 				<p>I'm Alejandro Pinto and this is my portfolio. Physicist with more than a year of research experience performing
-					computational calculations, data analysis using python language, and
-					delivery of scientific reports.
+					computational calculations,  my expertise in data analysis and manipulation includes proficiency in Python libraries such as Pandas, Seaborn, and Scikit Learn, as well as SQL.
 					<p> As a physicist, I have extensive experience in analyzing complex data sets and developing models to describe and predict physical phenomena. This experience has given me a strong foundation in data analysis, statistics, and mathematics, which I have been able to apply to real-world problems in various fields.</p>
 
-					<p>My proficiency in Python has enabled me to develop efficient and scalable data pipelines and perform data analysis using popular libraries such as NumPy, Pandas, seaborn, Plotly and Scikit-Learn. I have also developed several data-driven solutions using machine learning algorithms that have helped organizations optimize their operations and improve their bottom line.</p>
+					<p>My proficiency in Python has enabled me to develop efficient and scalable data pipelines and perform data science using popular libraries such as NumPy, Pandas, seaborn, Plotly and Scikit-Learn. I have also developed several data-driven solutions using machine learning algorithms that have helped organizations optimize their operations and improve their bottom line.</p>
 <!-- <p> I have more than a year of experience in the area of teaching university
 students and secondary education in the teaching of physics, maths and
 programming.</p> -->
