--- a/index.html
+++ b/index.html
@@ -109,18 +109,18 @@ programming.</p> -->
 							</article>
 						</div>
 					<!-- Project Netflix -->
-					<!-- <div class="column">
+					<div class="column">
 						<div class="box project-text jello-horizontal">
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="https://i.ibb.co/Nj54ZSH/Screenshot-from-2023-03-28-11-08-44.png" alt="Image" class="img-responsive" >
-									<a href="https://github.com/AlejandroPinto5/Streaming-platform"><figcaption >	Netflix Data Analysis.</figcaption></a>
+										<img src="https://i.ibb.co/41RzPH3/Screenshot-from-2023-05-07-09-58-36.png" alt="Image" class="img-responsive" >
+									<a href="projects/taxi-proj.html"><figcaption >	EDA for Taxi trip duration in NYC.</figcaption></a>
 									</figure>
 								</div>
 							</article>
 						</div>
-					</div> -->
+					</div>
 					<!-- Project 2 -->
 						<div class="box project-text jello-horizontal">
 							<article>
