--- a/projects/rp.html
+++ b/projects/rp.html
@@ -56,7 +56,7 @@
 		<main-rp id="rp">
 			<div class="index">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar-index container nav-item" href="../index.html" src="https://i.ibb.co/nwjS0FL/image33.png">
+				<img class="avatar-index container nav-item" href="../index.html" src="https://i.ibb.co/m0cLrhd/both-data.png">
 				<!-- Navegation list -->
 				<nav class="nav-list nav-menu">
 					<ul>
