Predicting taxi trip project added

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ programming.</p> -->
 							</article>
 						</div>
 					<!-- project linear regression -->
-					<div class="box project-text jello-horizontal">
+					<!-- <div class="box project-text jello-horizontal">
 						<article>
 							<div><a href="https://github.com/AlejandroPinto5/linear-models/blob/main/linear_regressaion.ipynb">
 								<figure class="image project-figure">
@@ -154,7 +154,19 @@ programming.</p> -->
 								</figure>
 							</div>
 						</article>
+					</div> -->
+						<!-- project predicting taxi trip Ç -->
+						<div class="box project-text jello-horizontal sql">
+							<article>
+					<div><a href="https://github.com/AlejandroPinto5/EDA-projects/blob/main/NYC-taxi-project/Pred_taxi_project.ipynb">
+						<figure class="image project-figure">
+							<img src="https://i.ibb.co/h8NbfCP/Screenshot-from-2023-05-08-13-10-20.png" alt="Image" class="img-responsive" >
+						<figcaption >
+							Comparison between linear Regression and Desicion tree to predict taxi trip duration.</figcaption></a>
+						</figure>
 					</div>
+				</article>
+			</div>
 				<!-- project ab testing and kpi -->
 				<div class="box project-text jello-horizontal sql">
 					<article>
