Filter not ready, but a quiet progress is there

--- a/index.html
+++ b/index.html
@@ -83,23 +83,17 @@ programming.</p> -->
 					<h3 class="title is-3"><b>Projects</b></h3>
 					<hr>
 				</div>
-				<div id="myBtnContainer" class="categories">
-		      <ul class="cat">
-		        <li>
-		          <ol class="type">
-								<li><a class="btn active" onclick="filterSelection('all')">All</a></li>
-		            <li><a class="btn" onclick="filterSelection('python')">Python</a></li>
-		            <li><a class="btn" onclick="filterSelection('sql')">SQL</a></li>
-		            <li><a class="btn" onclick="filterSelection('powerbi')">Power BI</a></li>
-		          </ol>
-		        </li>
+		      <ul class="filter-links">
+								<li><a href="#">All</a></li>
+		            <li><a href="#">Python</a></li>
+		            <li><a href="#">SQL</a></li>
+		            <li><a href="#">Power BI</a></li>
 		      </ul>
-		    </div>
 
-				<div class="project portfolio-items">
+				<div class="filter-sections">
 						<!-- Project EDA -->
-						<div class="column python">
-						<div class="portfolio-items box project-text jello-horizontal">
+						<div class="sql">
+							<div class="box jello-horizontal">
 							<article>
 								<div>	<a href="projects/eda.html">
 									<figure class="image project-figure">
@@ -109,9 +103,10 @@ programming.</p> -->
 								</div>
 							</article>
 						</div>
+
 						</div>
 					<!-- Project eda taxi trip -->
-					<div class="column python">
+					<div class="python">
 						<div class="box project-text jello-horizontal">
 							<article>
 								<div>
@@ -124,8 +119,8 @@ programming.</p> -->
 						</div>
 					</div>
 					<!-- Project 2 -->
-					<div class="column python">
-						<div class="box project-text jello-horizontal">
+					<div class="python">
+						<div class="box jello-horizontal">
 							<article>
 								<div> <a href="projects/eucaristicschool.html">
 									<figure class="image project-figure">
@@ -137,8 +132,8 @@ programming.</p> -->
 							</div>
 						</div>
 					<!-- Project Churn -->
-					<div class="column">
-						<div class="box project-text jello-horizontal">
+					<div class="python">
+						<div class="box jello-horizontal">
 							<article>
 								<div> <a href="projects/churn-pred-proj.html">
 									<figure class="image project-figure">
@@ -150,8 +145,8 @@ programming.</p> -->
 							</div>
 						</div>
 					<!-- project linear regression -->
-					<!-- <div class="column"> -->
-					<!-- <div class="box project-text jello-horizontal">
+					<!-- <div class="python"> -->
+					<!-- <div class="box jello-horizontal">
 						<article>
 							<div><a href="https://github.com/AlejandroPinto5/linear-models/blob/main/linear_regressaion.ipynb">
 								<figure class="image project-figure">
@@ -163,8 +158,8 @@ programming.</p> -->
 						</article></div>
 					</div> -->
 						<!-- project predicting taxi trip Ç -->
-						<div class="column sql">
-						<div class="box project-text jello-horizontal">
+						<div class="python">
+						<div class="box jello-horizontal">
 							<article>
 					<div><a href="https://github.com/AlejandroPinto5/EDA-projects/blob/main/NYC-taxi-project/Pred_taxi_project.ipynb">
 						<figure class="image project-figure">
@@ -177,8 +172,8 @@ programming.</p> -->
 				</div>
 			</div>
 				<!-- project ab testing and kpi -->
-				<div class="column sql">
-				<div class="box project-text jello-horizontal">
+				<div class="python">
+				<div class="box jello-horizontal">
 					<article>
 						<div><a href="projects/case-study.html">
 							<figure class="image project-figure">
@@ -191,8 +186,8 @@ programming.</p> -->
 					</div>
 				</div>
 			<!-- project decision tree implementation -->
-			<div class="column sql">
-			<div class="box project-text jello-horizontal">
+			<div class="python">
+			<div class="box jello-horizontal">
 				<article>
 					<div><a href="https://github.com/AlejandroPinto5/Decision-Tree/blob/main/Desicion_Tree_Implementation.ipynb">
 						<figure class="image project-figure">
@@ -206,8 +201,8 @@ programming.</p> -->
 			</div>
 		</div>
 				<!-- project linear regression -->
-				<div class="column">
-				<div class="box project-text jello-horizontal">
+				<div class="python">
+				<div class="box jello-horizontal">
 					<article>
 						<div><a href="https://github.com/AlejandroPinto5/linear-models/blob/main/logistic_regression.ipynb">
 							<figure class="image project-figure">
@@ -220,8 +215,8 @@ programming.</p> -->
 					</div>
 				</div>
 						<!-- project knn -->
-						<div class="column">
-						<div class="box project-text jello-horizontal">
+						<div class="python">
+						<div class="box jello-horizontal">
 							<article>
 								<div><a href="https://github.com/AlejandroPinto5/KNN-algorithm">
 									<figure class="image project-figure">
@@ -234,8 +229,8 @@ programming.</p> -->
 						</div>
 
 					<!-- project k-fold technique -->
-					<div class="column">
-					<div class="box project-text jello-horizontal">
+					<div class="python">
+					<div class="box jello-horizontal">
 						<div class="hover-bg"> <a href="projects/eda.html">
 						<article>
 							<div><a href="https://github.com/AlejandroPinto5/K-fold-Cross-Validation">
